Updated content and images

--- a/digital-metal.html
+++ b/digital-metal.html
@@ -96,14 +96,14 @@
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
-               <i class="fas fa-plus fa-3x"></i>
+               <!--<i class="fas fa-plus fa-3x"></i>-->
               </div>
             </div>
-            <img class="img-fluid" src="img/graphics/gr01.jpg" alt="">
+            <img class="img-fluid" src="img/DM/dm01.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Calendar</h4>
-         <p class="text-muted">Illustration</p>
+            <h4></h4>
+         <p class="text-muted"></p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
@@ -112,10 +112,10 @@
               <div class="portfolio-hover-content">
                </div>
             </div>
-            <img class="img-fluid" src="img/graphics/gr02.jpg" alt="">
+            <img class="img-fluid" src="img/DM/dm02.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Labels</h4>
+            <h4></h4>
             <!--<p class="text-muted">Graphic Design</p>-->
           </div>
         </div>
@@ -125,10 +125,10 @@
               <div class="portfolio-hover-content">
               </div>
             </div>
-            <img class="img-fluid" src="img/graphics/gr03.jpg" alt="">
+            <img class="img-fluid" src="img/DM/dm03.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Consumer Goods Packaging</h4>
+            <h4></h4>
            <!-- <p class="text-muted">Identity</p>-->
           </div>
         </div>
@@ -138,10 +138,10 @@
               <div class="portfolio-hover-content">
               </div>
             </div>
-            <img class="img-fluid" src="img/graphics/gr04.jpg" alt="">
+            <img class="img-fluid" src="img/DM/dm04.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Books & Magazine</h4>
+            <h4></h4>
            <!-- <p class="text-muted">Branding</p>-->
           </div>
         </div>
@@ -151,10 +151,10 @@
               <div class="portfolio-hover-content">
               </div>
             </div>
-            <img class="img-fluid" src="img/graphics/gr05.jpg" alt="">
+            <img class="img-fluid" src="img/DM/dm05.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Graphics</h4>
+            <h4></h4>
            <!-- <p class="text-muted">Website Design</p>-->
           </div>
         </div>
@@ -164,10 +164,36 @@
               <div class="portfolio-hover-content">
               </div>
             </div>
-            <img class="img-fluid" src="img/graphics/gr06.jpg" alt="">
+            <img class="img-fluid" src="img/DM/dm06.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Cigarettes & Tobacco</h4>
+            <h4></h4>
+           <!-- <p class="text-muted">Photography</p>-->
+          </div>
+        </div>
+		<div class="col-md-4 col-sm-6 portfolio-item">
+          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal7">
+            <div class="portfolio-hover">
+              <div class="portfolio-hover-content">
+              </div>
+            </div>
+            <img class="img-fluid" src="img/DM/dm07.jpg" alt="">
+          </a>
+          <div class="portfolio-caption">
+            <h4></h4>
+           <!-- <p class="text-muted">Photography</p>-->
+          </div>
+        </div>
+		<div class="col-md-4 col-sm-6 portfolio-item">
+          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal8">
+            <div class="portfolio-hover">
+              <div class="portfolio-hover-content">
+              </div>
+            </div>
+            <img class="img-fluid" src="img/DM/dm08.jpg" alt="">
+          </a>
+          <div class="portfolio-caption">
+            <h4></h4>
            <!-- <p class="text-muted">Photography</p>-->
           </div>
         </div>
@@ -216,7 +242,7 @@
   <!-- Portfolio Modals -->
 
   <!-- Modal 1 -->
-  <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
+  <!--<div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="close-modal" data-dismiss="modal">
@@ -229,7 +255,7 @@
             <div class="col-lg-8 mx-auto">
               <div class="modal-body">
                 <!-- Project Details Go Here -->
-              <h2 class="text-uppercase">Project Name</h2>
+              <!--<h2 class="text-uppercase">Project Name</h2>
                 <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/01-full.jpg" alt="">
                 <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
