--- a/brand-enhancement.html
+++ b/brand-enhancement.html
@@ -81,7 +81,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase heading-underline">Brand Enhancement</h2>
-          <h3 class="section-subheading text-muted">Decorative protection & functionality</h3>
+          <h3 class="section-subheading text-muted">Decorative Security & Brand Protection</h3>
 		  <!--Graphic hot stamping foil Kurz hot stamping foil can apply on all materials, from simple to complex.
 		  Although on paper, decals, labels PP, PE, rough paper, OPP or UV varnish, Kurz products always result in definition, fine and attractive performance.
 		  Adhere to the high quality standards of the Kurz group, products are excellent quality with high-gloss, scratch resistance and good compatibility with modern printing technology.
@@ -99,11 +99,11 @@
                <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/graphics/gr01.jpg" alt="">
+            <img class="img-fluid" src="img/BE/be01.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Calendar</h4>
-         <p class="text-muted">Illustration</p>
+            <h4></h4>
+         <p class="text-muted"></p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
@@ -112,10 +112,10 @@
               <div class="portfolio-hover-content">
                </div>
             </div>
-            <img class="img-fluid" src="img/graphics/gr02.jpg" alt="">
+            <img class="img-fluid" src="img/BE/be02.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Labels</h4>
+            <h4></h4>
             <!--<p class="text-muted">Graphic Design</p>-->
           </div>
         </div>
@@ -125,10 +125,10 @@
               <div class="portfolio-hover-content">
               </div>
             </div>
-            <img class="img-fluid" src="img/graphics/gr03.jpg" alt="">
+            <img class="img-fluid" src="img/BE/be03.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Consumer Goods Packaging</h4>
+            <h4></h4>
            <!-- <p class="text-muted">Identity</p>-->
           </div>
         </div>
@@ -138,10 +138,10 @@
               <div class="portfolio-hover-content">
               </div>
             </div>
-            <img class="img-fluid" src="img/graphics/gr04.jpg" alt="">
+            <img class="img-fluid" src="img/BE/be04.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Books & Magazine</h4>
+            <h4></h4>
            <!-- <p class="text-muted">Branding</p>-->
           </div>
         </div>
@@ -151,10 +151,10 @@
               <div class="portfolio-hover-content">
               </div>
             </div>
-            <img class="img-fluid" src="img/graphics/gr05.jpg" alt="">
+            <img class="img-fluid" src="img/BE/be05.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Graphics</h4>
+            <h4></h4>
            <!-- <p class="text-muted">Website Design</p>-->
           </div>
         </div>
@@ -164,13 +164,27 @@
               <div class="portfolio-hover-content">
               </div>
             </div>
-            <img class="img-fluid" src="img/graphics/gr06.jpg" alt="">
+            <img class="img-fluid" src="img/BE/be06.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Cigarettes & Tobacco</h4>
+            <h4></h4>
            <!-- <p class="text-muted">Photography</p>-->
           </div>
         </div>
+		<div class="col-md-4 col-sm-6 portfolio-item">
+          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
+            <div class="portfolio-hover">
+              <div class="portfolio-hover-content">
+              </div>
+            </div>
+            <img class="img-fluid" src="img/BE/be07.jpg" alt="">
+          </a>
+          <div class="portfolio-caption">
+            <h4></h4>
+           <!-- <p class="text-muted">Photography</p>-->
+          </div>
+        </div>
+		<h6> For more information: <a href="https://www.trustconcept.com">www.trustconcept.com</h6>
   </section>
 
   <!-- Footer -->
