--- a/high-security.html
+++ b/high-security.html
@@ -96,7 +96,7 @@
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
-               <i class="fas fa-plus fa-3x"></i>
+               <!--<i class="fas fa-plus fa-3x"></i>-->
               </div>
             </div>
             <img class="img-fluid" src="img/HISEC/hs01.jpg" alt="">
@@ -184,6 +184,32 @@
            <p class="text-muted">Birth, marriage and deaths certificates</p>
           </div>
         </div>
+		<div class="col-md-4 col-sm-6 portfolio-item">
+          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal7">
+            <div class="portfolio-hover">
+              <div class="portfolio-hover-content">
+              </div>
+            </div>
+            <img class="img-fluid" src="img/HISEC/hs08.jpg" alt="">
+          </a>
+          <div class="portfolio-caption">
+            <h4>Tax Stamps</h4>
+           <p class="text-muted"></p>
+          </div>
+        </div>
+		<div class="col-md-4 col-sm-6 portfolio-item">
+          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal7">
+            <div class="portfolio-hover">
+              <div class="portfolio-hover-content">
+              </div>
+            </div>
+            <img class="img-fluid" src="img/HISEC/hs09.jpg" alt="">
+          </a>
+          <div class="portfolio-caption">
+            <h4>Tax Stamps</h4>
+           <p class="text-muted"></p>
+          </div>
+        </div>
   </section>
 
   <!-- Footer -->
@@ -229,7 +255,7 @@
   <!-- Portfolio Modals -->
 
   <!-- Modal 1 -->
-  <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
+  <!--<div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="close-modal" data-dismiss="modal">
@@ -242,7 +268,7 @@
             <div class="col-lg-8 mx-auto">
               <div class="modal-body">
                 <!-- Project Details Go Here -->
-              <h2 class="text-uppercase">Project Name</h2>
+              <!--<h2 class="text-uppercase">Project Name</h2>
                 <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/01-full.jpg" alt="">
                 <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
