Moved & deleted redundant images

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                <!-- <i class="fas fa-plus fa-3x"></i>-->
               </div>
             </div>
-            <a href="graphic.html"><img class="img-fluid" src="img/1graphic.jpg" alt=""></a>
+            <a href="graphic.html"><img class="img-fluid" src="img/product/1graphic.jpg" alt=""></a>
           </a>
           <div class="portfolio-caption">
             <h4>Graphics</h4>
@@ -204,7 +204,7 @@
               <div class="portfolio-hover-content">
                </div>
             </div>
-            <a href="plastic.html"><img class="img-fluid" src="img/1plastic.jpg" alt="">
+            <a href="plastic.html"><img class="img-fluid" src="img/product/1plastic.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>Plastics</h4>
@@ -217,7 +217,7 @@
               <div class="portfolio-hover-content">
               </div>
             </div>
-            <a href="textile.html"><img class="img-fluid" src="img/1textile.jpg" alt="">
+            <a href="textile.html"><img class="img-fluid" src="img/product/1textile.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>Textile</h4>
@@ -230,7 +230,7 @@
               <div class="portfolio-hover-content">
               </div>
             </div>
-            <a href="ttr-coding.html"><img class="img-fluid" src="img/1ttrc.jpg" alt="">
+            <a href="ttr-coding.html"><img class="img-fluid" src="img/product/1ttrc.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>TTR & Coding</h4>
@@ -243,7 +243,7 @@
               <div class="portfolio-hover-content">
               </div>
             </div>
-            <a href="card-technology.html"><img class="img-fluid" src="img/1cardtech.jpg" alt="">
+            <a href="card-technology.html"><img class="img-fluid" src="img/product/1cardtech.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>Card Technology</h4>
@@ -256,7 +256,7 @@
               <div class="portfolio-hover-content">
               </div>
             </div>
-            <a href="brand-enhancement.html"><img class="img-fluid" src="img/1brand.jpg" alt="">
+            <a href="brand-enhancement.html"><img class="img-fluid" src="img/product/1brand.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>Brand Enhancement</h4>
@@ -269,7 +269,7 @@
               <div class="portfolio-hover-content">
               </div>
             </div>
-            <a href="digital-metal.html"><img class="img-fluid" src="img/1dm.jpg" alt="">
+            <a href="digital-metal.html"><img class="img-fluid" src="img/product/1dm.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>Digital Metal®</h4>
@@ -282,7 +282,7 @@
               <div class="portfolio-hover-content">
               </div>
             </div>
-            <a href="high-security.html"><img class="img-fluid" src="img/1hisec.jpg" alt="">
+            <a href="high-security.html"><img class="img-fluid" src="img/product/1hisec.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>High Security</h4>
@@ -295,7 +295,7 @@
               <div class="portfolio-hover-content">
               </div>
             </div>
-            <a href="hot-stamping-dies.html"><img class="img-fluid" src="img/1hsdie.jpg" alt="">
+            <a href="hot-stamping-dies.html"><img class="img-fluid" src="img/product/1hsdie.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>Hot Stamping Die</h4>
