Fixed missing </div>

--- a/brand-enhancement.html
+++ b/brand-enhancement.html
@@ -96,7 +96,7 @@
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
-               <i class="fas fa-plus fa-3x"></i>
+               <!--<i class="fas fa-plus fa-3x"></i>-->
               </div>
             </div>
             <img class="img-fluid" src="img/BE/be01.jpg" alt="">
@@ -183,8 +183,14 @@
             <h4></h4>
            <!-- <p class="text-muted">Photography</p>-->
           </div>
+		</div>
+	</div>
+	<div class="row">
+        <div class="col-md-12 col-sm-12">
+		  <h6> For more information: <a href="https://www.trustconcept.com">www.trustconcept.com</a></h6>
         </div>
-		<h6> For more information: <a href="https://www.trustconcept.com">www.trustconcept.com</h6>
+		</div>	
+	</div>		
   </section>
 
   <!-- Footer -->
