--- a/digital-metal.html
+++ b/digital-metal.html
@@ -197,6 +197,7 @@
            <!-- <p class="text-muted">Photography</p>-->
           </div>
         </div>
+		</div>
   </section>
 
   <!-- Footer -->
