Deleted unnecessary </div>

--- a/brand-enhancement.html
+++ b/brand-enhancement.html
@@ -44,7 +44,7 @@
             <a class="nav-link js-scroll-trigger" href="index.html#company">Company</a>
           </li>
            <li class="nav-item dropdown">
-            <a class="nav-link js-scroll-trigger dropdown-toggle" data-toggle="dropdown" href="#product">Product</a>
+            <a class="nav-link js-scroll-trigger dropdown-toggle" data-toggle="dropdown" href="index.html#product">Product</a>
             <div class="dropdown-menu">
               <a class="nav-link dropdown-item" href="graphic.html">Graphic</a>
               <a class="nav-link dropdown-item" href="plastic.html">Plastic</a>
@@ -188,8 +188,7 @@
 	<div class="row">
         <div class="col-md-12 col-sm-12">
 		  <h6> For more information: <a href="https://www.trustconcept.com">www.trustconcept.com</a></h6>
-        </div>
-		</div>	
+        </div>			
 	</div>		
   </section>
 
