--- a/index.html
+++ b/index.html
@@ -224,6 +224,19 @@
            <!-- <p class="text-muted">Identity</p>-->
           </div>
         </div>
+		<div class="col-md-4 col-sm-6 portfolio-item">
+          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
+            <div class="portfolio-hover">
+              <div class="portfolio-hover-content">
+              </div>
+            </div>
+            <a href="cosmetic.html"><img class="img-fluid" src="img/product/1cosmetic.jpg" alt="">
+          </a>
+          <div class="portfolio-caption">
+            <h4>Cosmetics</h4>
+           <!-- <p class="text-muted">Identity</p>-->
+          </div>
+        </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
             <div class="portfolio-hover">
