Updated dropdown menu to include Cosmetics

--- a/card-technology.html
+++ b/card-technology.html
@@ -44,11 +44,12 @@
             <a class="nav-link js-scroll-trigger" href="index.html#company">Company</a>
           </li>
            <li class="nav-item dropdown">
-            <a class="nav-link js-scroll-trigger dropdown-toggle" data-toggle="dropdown" href="#product">Product</a>
+            <a class="nav-link js-scroll-trigger dropdown-toggle" data-toggle="dropdown" href="index.html#product">Product</a>
             <div class="dropdown-menu">
-              <a class="nav-link dropdown-item" href="graphic.html">Graphic</a>
-              <a class="nav-link dropdown-item" href="plastic.html">Plastic</a>
+              <a class="nav-link dropdown-item" href="graphic.html">Graphics</a>
+              <a class="nav-link dropdown-item" href="plastic.html">Plastics</a>
               <a class="nav-link dropdown-item" href="textile.html">Textile</a>
+			  <a class="nav-link dropdown-item" href="textile.html">Cosmetics</a>
               <a class="nav-link dropdown-item" href="ttr-coding.html">TTR & Coding</a>
               <a class="nav-link dropdown-item" href="card-technology.html">Card Technology</a>
               <a class="nav-link dropdown-item" href="brand-enhancement.html">Brand Enhancement</a>
