--- a/cosmetic.html
+++ b/cosmetic.html
@@ -49,7 +49,7 @@
               <a class="nav-link dropdown-item" href="graphic.html">Graphics</a>
               <a class="nav-link dropdown-item" href="plastic.html">Plastics</a>
               <a class="nav-link dropdown-item" href="textile.html">Textile</a>
-			  <a class="nav-link dropdown-item" href="textile.html">Cosmetics</a>
+			  <a class="nav-link dropdown-item" href="cosmetic.html">Cosmetics</a>
               <a class="nav-link dropdown-item" href="ttr-coding.html">TTR & Coding</a>
               <a class="nav-link dropdown-item" href="card-technology.html">Card Technology</a>
               <a class="nav-link dropdown-item" href="brand-enhancement.html">Brand Enhancement</a>
