--- a/graphic.html
+++ b/graphic.html
@@ -104,7 +104,7 @@
           </a>
           <div class="portfolio-caption">
             <h4>Calendar</h4>
-         <p class="text-muted">Illustration</p>
+         <p class="text-muted"></p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
