--- a/high-security.html
+++ b/high-security.html
@@ -44,7 +44,7 @@
             <a class="nav-link js-scroll-trigger" href="index.html#company">Company</a>
           </li>
            <li class="nav-item dropdown">
-            <a class="nav-link js-scroll-trigger" href="index.html#product">Product<span class="dropdown-toggle" data-toggle="dropdown"></a>
+            <a class="nav-link js-scroll-trigger" href="index.html#product">Application<span class="dropdown-toggle" data-toggle="dropdown"></a>
             <div class="dropdown-menu">
               <a class="nav-link dropdown-item" href="graphic.html">Graphics</a>
               <a class="nav-link dropdown-item" href="plastic.html">Plastics</a>
