Fixed Image Directory

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-3">
-		<img src="foilrolls.jpg" class="img-fluid">
+		<img src="img/foilrolls.jpg" class="img-fluid">
     </div>
     <div class="col-sm-9">
       <p class="text-muted">MV Lien Minh Ltd Co., was established in 2003. Since then,
