Image Directory & Content Updates

--- a/index.html
+++ b/index.html
@@ -127,15 +127,15 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase heading-underline">Our Products</h2>
-          <!--<h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>-->
+          <h3 class="section-subheading text-muted">Foils</h3>
         </div>
 	      </div>
 <div class="container">
   <div class="row">
-    <div class="col-sm-3">
-		<img src="img/foilrolls.jpg" class="img-fluid">
+    <div class="col-sm-6">
+		<img src="img/product/kurzfoil.jpg" class="img-fluid">
     </div>
-    <div class="col-sm-9">
+    <div class="col-sm-6">
       <p class="text-muted">MV Lien Minh Ltd Co., was established in 2003. Since then,
             we're an exclusive agency of Leonhard Kurz Stiftung & Co. KG in Vietnam
             market, which is the leading company in hot stamping foil manufacturing and its
@@ -219,7 +219,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase heading-underline">Our Products</h2>
+          <h2 class="section-heading text-uppercase heading-underline">Applications</h2>
          <!-- <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>-->
         </div>
       </div>
@@ -231,7 +231,7 @@
                <!-- <i class="fas fa-plus fa-3x"></i>-->
               </div>
             </div>
-            <a href="graphic.html"><img class="img-fluid" src="img/product/1graphic.jpg" alt=""></a>
+            <a href="graphic.html"><img class="img-fluid" src="img/application/1graphic.jpg" alt=""></a>
           </a>
           <div class="portfolio-caption">
             <h4>Graphics</h4>
@@ -244,7 +244,7 @@
               <div class="portfolio-hover-content">
                </div>
             </div>
-            <a href="plastic.html"><img class="img-fluid" src="img/product/1plastic.jpg" alt="">
+            <a href="plastic.html"><img class="img-fluid" src="img/application/1plastic.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>Plastics</h4>
@@ -257,7 +257,7 @@
               <div class="portfolio-hover-content">
               </div>
             </div>
-            <a href="textile.html"><img class="img-fluid" src="img/product/1textile.jpg" alt="">
+            <a href="textile.html"><img class="img-fluid" src="img/application/1textile.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>Textile</h4>
@@ -270,7 +270,7 @@
               <div class="portfolio-hover-content">
               </div>
             </div>
-            <a href="cosmetic.html"><img class="img-fluid" src="img/product/1cosmetic.jpg" alt="">
+            <a href="cosmetic.html"><img class="img-fluid" src="img/application/1cosmetic.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>Cosmetics</h4>
@@ -283,7 +283,7 @@
               <div class="portfolio-hover-content">
               </div>
             </div>
-            <a href="ttr-coding.html"><img class="img-fluid" src="img/product/1ttrc.jpg" alt="">
+            <a href="ttr-coding.html"><img class="img-fluid" src="img/application/1ttrc.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>TTR & Coding</h4>
@@ -296,7 +296,7 @@
               <div class="portfolio-hover-content">
               </div>
             </div>
-            <a href="card-technology.html"><img class="img-fluid" src="img/product/1cardtech.jpg" alt="">
+            <a href="card-technology.html"><img class="img-fluid" src="img/application/1cardtech.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>Card Technology</h4>
@@ -309,7 +309,7 @@
               <div class="portfolio-hover-content">
               </div>
             </div>
-            <a href="brand-enhancement.html"><img class="img-fluid" src="img/product/1brand.jpg" alt="">
+            <a href="brand-enhancement.html"><img class="img-fluid" src="img/application/1brand.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>Brand Enhancement</h4>
@@ -322,7 +322,7 @@
               <div class="portfolio-hover-content">
               </div>
             </div>
-            <a href="digital-metal.html"><img class="img-fluid" src="img/product/1dm.jpg" alt="">
+            <a href="digital-metal.html"><img class="img-fluid" src="img/application/1dm.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>Digital Metal®</h4>
@@ -335,7 +335,7 @@
               <div class="portfolio-hover-content">
               </div>
             </div>
-            <a href="high-security.html"><img class="img-fluid" src="img/product/1hisec.jpg" alt="">
+            <a href="high-security.html"><img class="img-fluid" src="img/application/1hisec.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>High Security</h4>
@@ -348,7 +348,7 @@
               <div class="portfolio-hover-content">
               </div>
             </div>
-            <a href="hot-stamping-dies.html"><img class="img-fluid" src="img/product/1hsdie.jpg" alt="">
+            <a href="hot-stamping-dies.html"><img class="img-fluid" src="img/application/1hsdie.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>Hot Stamping Die</h4>
