--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 </section>
 
 <!-- Product -->
-  <section id="company">
+  <section id="product">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
