--- a/index.html
+++ b/index.html
@@ -239,6 +239,24 @@
     </div>
   </div>
 </div>
+<div class="container">
+  <div class="row">
+  <div class="row mt-5">
+    <div class="col-sm-5">
+		<img src="img/card/ct03.jpg" class="img-fluid">
+    </div>
+    <div class="offset-sm-1 col-sm-6">
+			<p><strong> Card Technology & Application Machines </strong></p>
+			<p class="text-muted">Security technologies and components for cards - such as credit, bank and payment, customer, loyalty or prepaid cards; furthermore ID documents such as identification cards or driving licenses.</P>
+            <p class="text-muted">The card component that we supply includes, Magnetic Foils, Signature Foils, Holographic OVDs, Tipping Foils, Cold Indent Foils, and also Scratch-Off Foils.</p>
+			<p class="text-muted">We also supply application machines that meet a diverse range of card requirements.</p>
+
+			
+
+
+    </div>
+  </div>
+</div>
       <!--<div class="row text-center">
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
