--- a/graphic.html
+++ b/graphic.html
@@ -93,6 +93,35 @@
         </div>
       </div>
       <div class="row">
+        <div class="col-md-4">
+          <img class="img-fluid" src="img/graphics/gr01.jpg" alt="">
+        </div>
+        <div class="col-md-4">
+          <div class="row">
+            <div class="col-md-6">
+              <img class="img-fluid" src="img/graphics/KURZ_0601_052.jpg" alt="">
+            </div>
+            <div class="col-md-6">
+              <img class="img-fluid" src="img/graphics/KURZ_0601_064.jpg" alt="">
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-6">
+              <img class="img-fluid" src="img/graphics/KURZ_0601_072.jpg" alt="">
+            </div>
+            <div class="col-md-6">
+              <img class="img-fluid" src="img/graphics/KURZ_0601_074.jpg" alt="">
+            </div>
+          </div>
+        </div>
+        <div class="col-md">
+          <div class="portfolio-caption">
+            <h4>Books, Magazines, Calendars</h4>
+            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis orci ante, varius eget volutpat eu, dignissim quis nibh. Aenean imperdiet ac arcu sit amet consectetur. Phasellus placerat metus sit amet ex lacinia, sit amet sagittis ex malesuada. Ut finibus nunc in diam gravida viverra.</p>
+          </div>
+        </div>
+      </div>
+      <div class="row">
         <div class="col-md-4 col-sm-6 portfolio-item">
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
             <div class="portfolio-hover">
