Header & Image Update

--- a/index.html
+++ b/index.html
@@ -174,12 +174,9 @@
     </div>
     <div class="offset-sm-1 col-sm-6">
 			<p><strong> Holographic Foils </strong></p>
-			<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-			Fusce nulla arcu, laoreet eu tortor in, finibus tempus neque.
-			Phasellus imperdiet porta dolor nec eleifend.
-			Curabitur et arcu cursus, lobortis elit et, facilisis elit.
-			Nulla finibus ultrices sapien, non pretium nisi posuere sit amet. Suspendisse potenti.
-			Mauris pharetra eu lacus non.</P>
+			<p class="text-muted">Cold foils are also available in holographic designs.
+			Large-area diffractive structures or single images can be selected.
+			Besides shiny metallic foils, there are also a range of transparent holographic foils to choose from.</P>
             
     </div>
   </div>
