--- a/graphic.html
+++ b/graphic.html
@@ -93,15 +93,15 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-4 no-padding">
           <img class="img-fluid" src="img/graphics/gr01.jpg" alt="">
         </div>
         <div class="col-md-4">
           <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6 no-padding">
               <img class="img-fluid" src="img/graphics/KURZ_0601_052.jpg" alt="">
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 no-padding">
               <img class="img-fluid" src="img/graphics/KURZ_0601_064.jpg" alt="">
             </div>
           </div>
