Fix spacing between images

--- a/graphic.html
+++ b/graphic.html
@@ -93,10 +93,10 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-4 no-padding">
+        <div class="col-md-4 portfolio-item no-padding">
           <img class="img-fluid" src="img/graphics/gr01.jpg" alt="">
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 portfolio-item no-padding">
           <div class="row">
             <div class="col-md-6 no-padding">
               <img class="img-fluid" src="img/graphics/KURZ_0601_052.jpg" alt="">
@@ -106,10 +106,10 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6 no-padding">
               <img class="img-fluid" src="img/graphics/KURZ_0601_072.jpg" alt="">
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 no-padding">
               <img class="img-fluid" src="img/graphics/KURZ_0601_074.jpg" alt="">
             </div>
           </div>
