Incomplete Updated Layout

--- a/graphic.html
+++ b/graphic.html
@@ -121,12 +121,113 @@
           </div>
         </div>
       </div>
+	  <div class="row">
+          <div class="col-md-4 portfolio-item no-padding">
+            <h4>Books, Magazines, Calendars</h4>
+            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis orci ante, varius eget volutpat eu, dignissim quis nibh. Aenean imperdiet ac arcu sit amet consectetur. Phasellus placerat metus sit amet ex lacinia, sit amet sagittis ex malesuada. Ut finibus nunc in diam gravida viverra.</p>
+          </div>
+	  <div class="col-md-4 portfolio-item no-padding">
+        <div class="row">
+          <img class="img-fluid" src="img/graphics/gr01.jpg" alt="">
+        </div>
+		</div>
+        <div class="col">
+          <div class="row">
+            <div class="col-md-6 no-padding">
+              <img class="img-fluid" src="img/graphics/KURZ_0601_074.jpg" alt="">
+            </div>
+            <div class="col-md-6 no-padding">
+              <img class="img-fluid" src="img/graphics/KURZ_0601_064.jpg" alt="">
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-6 no-padding">
+              <img class="img-fluid" src="img/graphics/KURZ_0601_072.jpg" alt="">
+            </div>
+            <div class="col-md-6 no-padding">
+              <img class="img-fluid" src="img/graphics/KURZ_0601_052.jpg" alt="">
+            </div>
+          </div>
+        </div>
+        </div>
+      </div>
+	  </div>
+
+	  <div class="col-md">
+        <div class="row">
+        <div class="col-md-4 portfolio-item no-padding">
+          <img class="img-fluid" src="img/graphics/gr01.jpg" alt="">
+        </div>
+        <div class="col-md-4 portfolio-item no-padding">
+          <div class="row">
+            <div class="col-md-6 no-padding">
+              <img class="img-fluid" src="img/graphics/KURZ_0601_074.jpg" alt="">
+            </div>
+            <div class="col-md-6 no-padding">
+              <img class="img-fluid" src="img/graphics/KURZ_0601_064.jpg" alt="">
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-6 no-padding">
+              <img class="img-fluid" src="img/graphics/KURZ_0601_072.jpg" alt="">
+            </div>
+            <div class="col-md-6 no-padding">
+              <img class="img-fluid" src="img/graphics/KURZ_0601_052.jpg" alt="">
+            </div>
+          </div>
+        </div>
+        <div class="col-md">
+          <div class="portfolio-caption">
+            <h4>Books, Magazines, Calendars</h4>
+            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis orci ante, varius eget volutpat eu, dignissim quis nibh. Aenean imperdiet ac arcu sit amet consectetur. Phasellus placerat metus sit amet ex lacinia, sit amet sagittis ex malesuada. Ut finibus nunc in diam gravida viverra.</p>
+          </div>
+        </div>
+      </div>
+	  </div>
+	  
+	  <div class="row">
+          <div class="col-md-4 portfolio-item no-padding">
+            <h4>Books, Magazines, Calendars</h4>
+            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis orci ante, varius eget volutpat eu, dignissim quis nibh. Aenean imperdiet ac arcu sit amet consectetur. Phasellus placerat metus sit amet ex lacinia, sit amet sagittis ex malesuada. Ut finibus nunc in diam gravida viverra.</p>
+          </div>
+	  <div class="col-md-4 portfolio-item no-padding">
+        <div class="row">
+          <img class="img-fluid" src="img/graphics/gr02.jpg" alt="">
+        </div>
+		</div>
+        <div class="col">
+          <div class="row">
+            <div class="col-md-6 no-padding">
+              <img class="img-fluid" src="img/graphics/KURZ_0601_074.jpg" alt="">
+            </div>
+            <div class="col-md-6 no-padding">
+              <img class="img-fluid" src="img/graphics/KURZ_0601_064.jpg" alt="">
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-6 no-padding">
+              <img class="img-fluid" src="img/graphics/KURZ_0601_072.jpg" alt="">
+            </div>
+            <div class="col-md-6 no-padding">
+              <img class="img-fluid" src="img/graphics/KURZ_0601_052.jpg" alt="">
+            </div>
+          </div>
+        </div>
+        </div>
+      </div>
+	  
+	  <!--
+	  <div class="col-md">
+        <div class="col-md-4 portfolio-item no-padding">
+          <img class="img-fluid" src="img/graphics/gr01.jpg" alt="">
+        </div>
+		</div>
       <div class="row">
         <div class="col-md-4 col-sm-6 portfolio-item">
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
-               <!--<i class="fas fa-plus fa-3x"></i>-->
+               <!--<i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
             <img class="img-fluid" src="img/graphics/gr01.jpg" alt="">
@@ -146,7 +247,7 @@
           </a>
           <div class="portfolio-caption">
             <h4>Labels</h4>
-            <!--<p class="text-muted">Graphic Design</p>-->
+            <!--<p class="text-muted">Graphic Design</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
@@ -159,7 +260,7 @@
           </a>
           <div class="portfolio-caption">
             <h4>Consumer Goods Packaging</h4>
-           <!-- <p class="text-muted">Identity</p>-->
+           <!-- <p class="text-muted">Identity</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
@@ -172,7 +273,7 @@
           </a>
           <div class="portfolio-caption">
             <h4>Books & Magazine</h4>
-           <!-- <p class="text-muted">Branding</p>-->
+           <!-- <p class="text-muted">Branding</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
@@ -185,7 +286,7 @@
           </a>
           <div class="portfolio-caption">
             <h4>Greeting Cards & Illustrations</h4>
-           <!-- <p class="text-muted">Website Design</p>-->
+           <!-- <p class="text-muted">Website Design</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
@@ -198,9 +299,10 @@
           </a>
           <div class="portfolio-caption">
             <h4>Cigarettes & Tobacco</h4>
-           <!-- <p class="text-muted">Photography</p>-->
+           <!-- <p class="text-muted">Photography</p>
           </div>
-        </div>
+        </div>-->
+		
   </section>
 
   <!-- Footer -->
