--- a/graphic.html
+++ b/graphic.html
@@ -123,7 +123,7 @@
       </div>
 	  <div class="row">
           <div class="col-md-4 portfolio-item no-padding">
-            <h4>Books, Magazines, Calendars</h4>
+            <h4>Consumer Goods Packaging</h4>
             <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis orci ante, varius eget volutpat eu, dignissim quis nibh. Aenean imperdiet ac arcu sit amet consectetur. Phasellus placerat metus sit amet ex lacinia, sit amet sagittis ex malesuada. Ut finibus nunc in diam gravida viverra.</p>
           </div>
 	  <div class="col-md-4 portfolio-item no-padding">
@@ -178,7 +178,7 @@
         </div>
         <div class="col-md">
           <div class="portfolio-caption">
-            <h4>Books, Magazines, Calendars</h4>
+            <h4>Cigarette Boxes</h4>
             <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis orci ante, varius eget volutpat eu, dignissim quis nibh. Aenean imperdiet ac arcu sit amet consectetur. Phasellus placerat metus sit amet ex lacinia, sit amet sagittis ex malesuada. Ut finibus nunc in diam gravida viverra.</p>
           </div>
         </div>
