--- a/graphic.html
+++ b/graphic.html
@@ -99,18 +99,18 @@
         <div class="col-md-4 portfolio-item no-padding">
           <div class="row">
             <div class="col-md-6 no-padding">
-              <img class="img-fluid" src="img/graphics/KURZ_0601_074.jpg" alt="">
+              <img class="img-fluid" src="img/graphics/gr02.jpg" alt="">
             </div>
             <div class="col-md-6 no-padding">
-              <img class="img-fluid" src="img/graphics/KURZ_0601_064.jpg" alt="">
+              <img class="img-fluid" src="img/graphics/gr03.jpg" alt="">
             </div>
           </div>
           <div class="row">
             <div class="col-md-6 no-padding">
-              <img class="img-fluid" src="img/graphics/KURZ_0601_072.jpg" alt="">
+              <img class="img-fluid" src="img/graphics/gr04.jpg" alt="">
             </div>
             <div class="col-md-6 no-padding">
-              <img class="img-fluid" src="img/graphics/KURZ_0601_052.jpg" alt="">
+              <img class="img-fluid" src="img/graphics/gr05.jpg" alt="">
             </div>
           </div>
         </div>
@@ -122,67 +122,73 @@
         </div>
     </div>
 	  
+	
 	<div class="row">
-        <div class="col-md-4 portfolio-item no-padding">
+        <div class="col-md-4 portfolio-item">
             <h4>Consumer Goods Packaging</h4>
             <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis orci ante, varius eget volutpat eu, dignissim quis nibh. Aenean imperdiet ac arcu sit amet consectetur. Phasellus placerat metus sit amet ex lacinia, sit amet sagittis ex malesuada. Ut finibus nunc in diam gravida viverra.</p>
         </div>
-	    <div class="col-md-4 portfolio-item no-padding">
+	    <div class="col-md-4 portfolio-item">
         <div class="row">
-          <img class="img-fluid" src="img/graphics/gr01.jpg" alt="">
+          <img class="img-fluid" src="img/graphics/gr06.jpg" alt="">
         </div>
 		</div>
-        <div class="col">
-          <div class="row">
-            <div class="col-md-6 no-padding">
-              <img class="img-fluid" src="img/graphics/KURZ_0601_074.jpg" alt="">
-            </div>
-            <div class="col-md-6 no-padding">
-              <img class="img-fluid" src="img/graphics/KURZ_0601_064.jpg" alt="">
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-6 no-padding">
-              <img class="img-fluid" src="img/graphics/KURZ_0601_072.jpg" alt="">
-            </div>
-            <div class="col-md-6 no-padding">
-              <img class="img-fluid" src="img/graphics/KURZ_0601_052.jpg" alt="">
-            </div>
-          </div>
+        <div class="col-md-4 portfolio-item">
+        <div class="row">
+          <img class="img-fluid" src="img/graphics/gr07.jpg" alt="">
         </div>
-    </div>
-      	  
-	  
-	<div class="row">
+		</div>
+		<div class="col-md-4 portfolio-item no-padding">
+        <div class="row">
+          <img class="img-fluid" src="img/graphics/gr08.jpg" alt="">
+        </div>
+		</div>
+		
+		
+		<div class="col-md-4 portfolio-item no-padding">
+        <div class="row">
+          <img class="img-fluid" src="img/graphics/gr09.jpg" alt="">
+        </div>
+		</div>
+		<div class="col-md-4 portfolio-item no-padding">
+        <div class="row">
+          <img class="img-fluid" src="img/graphics/gr10.jpg" alt="">
+        </div>
+		</div>
+		
+		
+		<div class="col-md-4 portfolio-item no-padding">
+        <div class="row">
+          <img class="img-fluid" src="img/graphics/gr11.jpg" alt="">
+        </div>
+		</div>      	   
         <div class="col-md-4 portfolio-item no-padding">
-          <img class="img-fluid" src="img/graphics/gr01.jpg" alt="">
+		<div class="row">
+          <img class="img-fluid" src="img/graphics/gr12.jpg" alt="">
         </div>
-        <div class="col-md-4 portfolio-item no-padding">
-			<div class="row">
-				<div class="col-md-6 no-padding">
-              <img class="img-fluid" src="img/graphics/KURZ_0601_074.jpg" alt="">
+		</div>
+		<div class="col-md-4 portfolio-item no-padding">
+		<div class="row">
+          <img class="img-fluid" src="img/graphics/gr13.jpg" alt="">
         </div>
-            <div class="col-md-6 no-padding">
-              <img class="img-fluid" src="img/graphics/KURZ_0601_064.jpg" alt="">
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-6 no-padding">
-              <img class="img-fluid" src="img/graphics/KURZ_0601_072.jpg" alt="">
-            </div>
-            <div class="col-md-6 no-padding">
-              <img class="img-fluid" src="img/graphics/KURZ_0601_052.jpg" alt="">
-            </div>
-          </div>
-        </div>
-       	<div class="col-md">
-          <div class="portfolio-caption">
-            <h4>Cigarette Boxes</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis orci ante, varius eget volutpat eu, dignissim quis nibh. Aenean imperdiet ac arcu sit amet consectetur. Phasellus placerat metus sit amet ex lacinia, sit amet sagittis ex malesuada. Ut finibus nunc in diam gravida viverra.</p>
-          </div>
-        </div>
-    </div>
+		</div>
+      
 	
+		<div class="col-md-4 portfolio-item no-padding">
+        <div class="row">
+          <img class="img-fluid" src="img/graphics/gr14.jpg" alt="">
+        </div>
+		</div>      	   
+        <div class="col-md-4 portfolio-item no-padding">
+		<div class="row">
+          <img class="img-fluid" src="img/graphics/gr15.jpg" alt="">
+        </div>
+		</div>
+		<div class="col-md-4 portfolio-item no-padding">
+		<div class="row">
+          <img class="img-fluid" src="img/graphics/gr16.jpg" alt="">
+        </div>
+		</div>
 	  
 	  <div class="row">
           <div class="col-md-4 portfolio-item no-padding">
