Clean up code and indentation

--- a/graphic.html
+++ b/graphic.html
@@ -43,13 +43,13 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="index.html#company">Company</a>
           </li>
-           <li class="nav-item dropdown">
+          <li class="nav-item dropdown">
             <a class="nav-link js-scroll-trigger" href="index.html#product">Application<span class="dropdown-toggle" data-toggle="dropdown"></a>
             <div class="dropdown-menu">
               <a class="nav-link dropdown-item" href="graphic.html">Graphics</a>
               <a class="nav-link dropdown-item" href="plastic.html">Plastics</a>
               <a class="nav-link dropdown-item" href="textile.html">Textile</a>
-			  <a class="nav-link dropdown-item" href="cosmetic.html">Cosmetics</a>
+              <a class="nav-link dropdown-item" href="cosmetic.html">Cosmetics</a>
               <a class="nav-link dropdown-item" href="ttr-coding.html">TTR & Coding</a>
               <a class="nav-link dropdown-item" href="card-technology.html">Card Technology</a>
               <a class="nav-link dropdown-item" href="brand-enhancement.html">Brand Enhancement</a>
@@ -69,7 +69,7 @@
     </div>
   </nav>
 
-<header class="graphhead">
+  <header class="graphhead">
     <div class="container">
       <div class="intro-text">
       </div>
@@ -83,16 +83,16 @@
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase heading-underline">Graphics</h2>
           <h3 class="section-subheading text-muted">The unrivaled technology for surface feel and attraction</h3>
-		  <!--Graphic hot stamping foil Kurz hot stamping foil can apply on all materials, from simple to complex.
-		  Although on paper, decals, labels PP, PE, rough paper, OPP or UV varnish, Kurz products always result in definition, fine and attractive performance.
-		  Adhere to the high quality standards of the Kurz group, products are excellent quality with high-gloss, scratch resistance and good compatibility with modern printing technology.
-		  The Kurz foil for the graphic foil:
-		  Luxor/Alufin:  Metallized with high gloss, satingloss, matt, super matt, metallic.
-		  Lightline: Diffractive Endless Pattern & Laser foils silver, gold, transparent, special colors.
-		  Colorit: Pigmented matt, high gloss transparent or black, pearl gloss.-->
+          <!--Graphic hot stamping foil Kurz hot stamping foil can apply on all materials, from simple to complex.
+          Although on paper, decals, labels PP, PE, rough paper, OPP or UV varnish, Kurz products always result in definition, fine and attractive performance.
+          Adhere to the high quality standards of the Kurz group, products are excellent quality with high-gloss, scratch resistance and good compatibility with modern printing technology.
+          The Kurz foil for the graphic foil:
+          Luxor/Alufin:  Metallized with high gloss, satingloss, matt, super matt, metallic.
+          Lightline: Diffractive Endless Pattern & Laser foils silver, gold, transparent, special colors.
+          Colorit: Pigmented matt, high gloss transparent or black, pearl gloss.-->
         </div>
       </div>
-    <div class="row">
+      <div class="row">
         <div class="col-md-4 portfolio-item no-padding">
           <img class="img-fluid" src="img/graphics/gr01.jpg" alt="">
         </div>
@@ -120,86 +120,62 @@
             <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis orci ante, varius eget volutpat eu, dignissim quis nibh. Aenean imperdiet ac arcu sit amet consectetur. Phasellus placerat metus sit amet ex lacinia, sit amet sagittis ex malesuada. Ut finibus nunc in diam gravida viverra.</p>
           </div>
         </div>
-    </div>
-	  
-	
-	<div class="row">
+      </div>
+
+      <div class="row">
         <div class="col-md-4 portfolio-item">
-            <h4>Consumer Goods Packaging</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis orci ante, varius eget volutpat eu, dignissim quis nibh. Aenean imperdiet ac arcu sit amet consectetur. Phasellus placerat metus sit amet ex lacinia, sit amet sagittis ex malesuada. Ut finibus nunc in diam gravida viverra.</p>
+          <h4>Consumer Goods Packaging</h4>
+          <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis orci ante, varius eget volutpat eu, dignissim quis nibh. Aenean imperdiet ac arcu sit amet consectetur. Phasellus placerat metus sit amet ex lacinia, sit amet sagittis ex malesuada. Ut finibus nunc in diam gravida viverra.</p>
         </div>
-	    <div class="col-md-4 portfolio-item">
-        <div class="row">
+        <div class="col-md-4 portfolio-item">
           <img class="img-fluid" src="img/graphics/gr06.jpg" alt="">
         </div>
-		</div>
         <div class="col-md-4 portfolio-item">
-        <div class="row">
           <img class="img-fluid" src="img/graphics/gr07.jpg" alt="">
         </div>
-		</div>
-		<div class="col-md-4 portfolio-item no-padding">
-        <div class="row">
-          <img class="img-fluid" src="img/graphics/gr08.jpg" alt="">
+        <div class="col-md-4 portfolio-item no-padding">
+          <div class="row">
+            <div class="col-md-12 no-padding">
+              <img class="img-fluid" src="img/graphics/gr08.jpg" alt="">
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12 no-padding">
+              <img class="img-fluid" src="img/graphics/gr09.jpg" alt="">
+            </div>
+          </div>
         </div>
-		</div>
-		
-		
-		<div class="col-md-4 portfolio-item no-padding">
-        <div class="row">
-          <img class="img-fluid" src="img/graphics/gr09.jpg" alt="">
-        </div>
-		</div>
-		<div class="col-md-4 portfolio-item no-padding">
-        <div class="row">
+        <div class="col-md-4 portfolio-item no-padding">
           <img class="img-fluid" src="img/graphics/gr10.jpg" alt="">
         </div>
-		</div>
-		
-		
-		<div class="col-md-4 portfolio-item no-padding">
-        <div class="row">
+        <div class="col-md-4 portfolio-item no-padding">
           <img class="img-fluid" src="img/graphics/gr11.jpg" alt="">
         </div>
-		</div>      	   
         <div class="col-md-4 portfolio-item no-padding">
-		<div class="row">
           <img class="img-fluid" src="img/graphics/gr12.jpg" alt="">
         </div>
-		</div>
-		<div class="col-md-4 portfolio-item no-padding">
-		<div class="row">
+        <div class="col-md-4 portfolio-item no-padding">
           <img class="img-fluid" src="img/graphics/gr13.jpg" alt="">
         </div>
-		</div>
-      
-	
-		<div class="col-md-4 portfolio-item no-padding">
-        <div class="row">
+        <div class="col-md-4 portfolio-item no-padding">
           <img class="img-fluid" src="img/graphics/gr14.jpg" alt="">
         </div>
-		</div>      	   
         <div class="col-md-4 portfolio-item no-padding">
-		<div class="row">
           <img class="img-fluid" src="img/graphics/gr15.jpg" alt="">
         </div>
-		</div>
-		<div class="col-md-4 portfolio-item no-padding">
-		<div class="row">
+        <div class="col-md-4 portfolio-item no-padding">
           <img class="img-fluid" src="img/graphics/gr16.jpg" alt="">
         </div>
-		</div>
-	  
-	  <div class="row">
-          <div class="col-md-4 portfolio-item no-padding">
-            <h4>Books, Magazines, Calendars</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis orci ante, varius eget volutpat eu, dignissim quis nibh. Aenean imperdiet ac arcu sit amet consectetur. Phasellus placerat metus sit amet ex lacinia, sit amet sagittis ex malesuada. Ut finibus nunc in diam gravida viverra.</p>
-          </div>
-	  <div class="col-md-4 portfolio-item no-padding">
-        <div class="row">
+      </div>
+
+      <div class="row">
+        <div class="col-md-4 portfolio-item no-padding">
+          <h4>Books, Magazines, Calendars</h4>
+          <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis orci ante, varius eget volutpat eu, dignissim quis nibh. Aenean imperdiet ac arcu sit amet consectetur. Phasellus placerat metus sit amet ex lacinia, sit amet sagittis ex malesuada. Ut finibus nunc in diam gravida viverra.</p>
+        </div>
+        <div class="col-md-4 portfolio-item no-padding">
           <img class="img-fluid" src="img/graphics/gr02.jpg" alt="">
         </div>
-		</div>
         <div class="col">
           <div class="row">
             <div class="col-md-6 no-padding">
@@ -218,9 +194,9 @@
             </div>
           </div>
         </div>
-        </div>
       </div>
-	  
+    </div>
+
 	  <!--
 	  <div class="col-md">
         <div class="col-md-4 portfolio-item no-padding">
@@ -307,7 +283,6 @@
            <!-- <p class="text-muted">Photography</p>
           </div>
         </div>-->
-		
   </section>
 
   <!-- Footer -->
